tests/neg/interleaving-unmatched.scala

object unmatched:
    def f1[T (x: T)] = ??? // error
    def f2(x: Any[)T] = ??? // error // error
